instructions for android

--- a/src/HuggleLite/CMakeLists.txt
+++ b/src/HuggleLite/CMakeLists.txt
@@ -48,8 +48,16 @@ QT5_WRAP_UI(HuggleLite_FORMS_HEADERS ${HuggleLite_FORMS})
 QT5_ADD_RESOURCES(HuggleLite_RESOURCES_RCC ${HuggleLite_RESOURCES})
 add_definitions(${QT_DEFINITIONS})
 add_definitions( -DQT_USE_QSTRINGBUILDER )
-add_executable(HuggleLite ${HuggleLite_SOURCES} ${headers} ${headers_web} ${HuggleLite_HEADERS_MOC} ${HuggleLite_FORMS_HEADERS} ${HuggleLite_RESOURCES_RCC})
+if(ANDROID)
+    add_library(HuggleLite SHARED ${HuggleLite_SOURCES} ${headers} ${headers_web} ${HuggleLite_HEADERS_MOC} ${HuggleLite_FORMS_HEADERS} ${HuggleLite_RESOURCES_RCC})
+else()
+    add_executable(HuggleLite ${HuggleLite_SOURCES} ${headers} ${headers_web} ${HuggleLite_HEADERS_MOC} ${HuggleLite_FORMS_HEADERS} ${HuggleLite_RESOURCES_RCC})
+endif()
 qt5_use_modules(HuggleLite Core Gui Widgets Network Xml)
+if(ANDROID)
+    include(../../deps/qt-android-cmake/AddQtAndroidApk.cmake)
+    add_qt_android_apk(HuggleLite_apk HuggleLite)
+endif()
 
 target_link_libraries(HuggleLite huggle_core ${QT_LIBRARIES})
 
