--- a/src/HuggleLite/android/AndroidManifest.xml
+++ b/src/HuggleLite/android/AndroidManifest.xml
@@ -21,13 +21,10 @@
             <meta-data android:name="android.app.load_local_libs" android:value="plugins/platforms/android/libqtforandroid.so:plugins/bearer/libqandroidbearer.so"/>
             <meta-data android:name="android.app.load_local_jars" android:value="jar/QtAndroid.jar:jar/QtAndroidAccessibility.jar:jar/QtAndroid-bundled.jar:jar/QtAndroidAccessibility-bundled.jar:jar/QtAndroidBearer.jar:jar/QtAndroidBearer-bundled.jar"/>
 			<meta-data android:name="android.app.static_init_classes" android:value=""/>
-			<!--  Messages maps -->
-			<!--<meta-data android:name="android.app.ministro_not_found_msg" android:value="@string/ministro_not_found_msg"/>
-			<meta-data android:name="android.app.ministro_needed_msg" android:value="@string/ministro_needed_msg"/>
-			<meta-data android:name="android.app.fatal_error_msg" android:value="@string/fatal_error_msg"/>-->
 		</activity>
 	</application>
 	<supports-screens android:anyDensity="true" android:normalScreens="true" android:smallScreens="true" android:largeScreens="true"/>
 	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19"/>
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
